--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "proyecto2021",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "5.2.1",
+    "alpinejs": "^2.8.0",
+    "jquery": "^3.5.1",
+    "tailwindcss": "~1.0.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
+  }
 }
